--- a/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-primary" asp-area="" asp-controller="Categories" asp-action="Index" style="font-size:x-large">Categories</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-primary" asp-area="" asp-controller="TransactionsHistory" asp-action="Index" style="font-size:x-large">History</a>
+                        </li>
                         @*<a class="navbar-brand" asp-area="" asp-controller="Users" asp-action="Index">Users</a>*@
                         @*<a class="navbar-brand" asp-area="" asp-controller="UserDevices" asp-action="Index">User Devices History</a>*@
                     }
