--- a/InfiniteTiers.DevicesStore.Presentation/Views/TransactionsHistory/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/TransactionsHistory/Index.cshtml
@@ -1,58 +1,42 @@
-﻿@model IEnumerable<InfiniteTiers.DevicesStore.Presentation.Areas.Identity.Data.UserDevice>
+﻿@model IEnumerable<InfiniteTiers.DevicesStore.Data.Models.Device>
 
 
 @{
-    ViewData["Title"] = "History";
+    ViewData["Title"] = "Devices";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1 class="text-center text-primary">Transactions History</h1>
+<h1 class="text-center text-primary">Devices</h1>
 
-
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TransactionDate)
-            </th>
-            <th>
-                From
-            </th>
-            <th>
-                To
-            </th>
-            <th>
-                Device
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TransactionDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FromUser.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ToUser.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Device.Name)
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-<style>
-    td, th {
-        text-align: center;
+<hr />
+<div class="row">
+    @foreach (var device in Model)
+    {
+        <div class="col-md-4 mb-5">
+            <div class="card text-center border-primary">
+                <div class="card-header">
+                    @device.Name
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">@device.Category.Name</h5>
+                    <p class="card-text">@device.Description</p>
+                    @if (device.IsActive)
+                    {
+                        <p class="card-text text-center bg-success">
+                            Active
+                        </p>
+                    }
+                    else
+                    {
+                        <p class="card-text text-center bg-danger">
+                            Inactive
+                        </p>
+                    }
+                </div>
+                <div class="card-footer">
+                    <a asp-action="History" asp-route-id="@device.DeviceId" class="btn btn-primary">View Transactions</a>
+                </div>
+            </div>
+        </div>
     }
-
-    a:hover {
-        text-decoration: none;
-    }
-</style>
-
+</div>
