--- a/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Edit.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Edit.cshtml
@@ -15,6 +15,7 @@
     <form asp-action="Edit" class="col-md-12">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="DeviceId" />
+        <input type="hidden" asp-for="ApplicationUserId" />
 
         <div class="row">
             <div class="col-lg-4">
